# ShadesAndOrigins

./: CMakeLists.txt  README.md  game.hpp  main  main.cpp  shades_and_origins.code-workspace  token.hpp
src/: CMakeLists.txt  data_types.hpp  game.hpp  main.cpp  monte_carlo.cpp  monte_carlo.hpp
tests/: CMakeLists.txt  catch.hpp  test.cpp
